--- a/style.css
+++ b/style.css
@@ -64,3 +64,22 @@ h3 {
 	width: 48%;
 	text-align: left;
 }
+
+.share, .details {
+	text-align: center;
+	margin: 0 auto;
+}
+
+.share {
+	font-size: 1.2rem;
+	margin: 16px 0px;
+}
+
+.details {
+	color: #bbb;
+	margin-top: 12px;
+}
+
+.details a { 
+	color: #333;
+}
